--- a/sproduct.html
+++ b/sproduct.html
@@ -1,25 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ecommerce</title>
+  <!--box icons link-->
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css" />
 
 
-        <script>
-            // script for image change on click
-        </script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header id="header">
+    <a href="#"><img src="img/logo.png" class="logo" alt="logo" /></a>
+
+    <div class="navbar">
+      <ul id="navlist">
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="Shop.html">Shop</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li id="lg-bag">
+          <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+        </li>
+        <a href="#" id="close"><i class='bx bxs-chevrons-right'></i></a>
+      </ul>
+    </div>
+    <div id="mobile">
+      <li>
+        <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+      </li>
+      <i id="bar" class='bx bx-menu'></i>
+    </div>
+  </header>
+  <section id="prodetails" class="section-p1">
+    <div class="single-pro-image images">
+      <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="">
+
+      <div class="small-img-group">
+        <div class="small-img-col">
+          <img src="img/products/f1.jpg" width="100%" class="small-img" alt="">
+        </div>
+        <div class="small-img-col">
+          <img src="img/products/f2.jpg" width="100%" class="small-img" alt="">
+        </div>
+        <div class="small-img-col">
+          <img src="img/products/f3.jpg" width="100%" class="small-img" alt="">
+        </div>
+        <div class="small-img-col">
+          <img src="img/products/f4.jpg" width="100%" class="small-img" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div class="single-pro-details">
+      <h6>Home / T-Shirt</h6>
+      <h4>Men's Fashion T-Shirt</h4>
+      <h2>2500fcfa</h2>
+      <select>
+        <option>select size</option>
+        <option>XL</option>
+        <option>XXL</option>
+        <option>small</option>
+        <option>Large</option>
+        <input type="number" value="1">
+        <button class="normal">Add To Cart</button>
+        <h4>Product Details</h4>
+        <span>The Gildan Ultra cotton T-shirt is made from a substantial 6.0 oz. per
+          sq yd. fabric constructed from 100% cotton, this classic fit preshrunk
+          jersey knit provides unmatched confort width each wear. Featuring a taped neck
+          and shoulder, and a seamless double-needle collar, and available in a range
+          of colors, it offers it all in the ultimate head-turning package.
+        </span>
+      </select>
+    </div>
+
+  </section>
+
+  <section id="products">
+    <div class="section-p1">
+      <h2>Featured Products</h2>
+      <p>Summer Collection New Morden Design</p>
+    </div>
+    <div class="pro-container">
+      <div class="pro">
+        <img src="img/products/n1.jpg" alt="" />
+        <div class="description">
+          <span>Adidas</span>
+          <h5>Cartoon Astronaut T-Shirts</h5>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <h4>3000 fcfa</h4>
+          <a href="#"><i class="bx bx-cart cart"></i></a>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/products/n2.jpg" alt="" />
+        <div class="description">
+          <span>Adidas</span>
+          <h5>Cartoon Astronaut T-Shirts</h5>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <h4>2500 fcfa</h4>
+          <a href="#"><i class="bx bx-cart cart"></i></a>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/products/n3.jpg" alt="" />
+        <div class="description">
+          <span>Adidas</span>
+          <h5>Cartoon Astronaut T-Shirts</h5>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <h4>2500 fcfa</h4>
+          <a href="#"><i class="bx bx-cart cart"></i></a>
+        </div>
+      </div>
+
+      <div class="pro">
+        <img src="img/products/n4.jpg" alt="" />
+        <div class="description">
+          <span>Adidas</span>
+          <h5>Cartoon Astronaut T-Shirts</h5>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+          </div>
+          <h4>3500 fcfa</h4>
+          <a href="#"><i class="bx bx-cart cart"></i></a>
+        </div>
+      </div>
+
+      
+    </div>
+  </section>
 
 
-        <script src="script.js"></script>
-    </body>
+  <section id="newsletter" class="section-p1 section-m1">
+    <div class="newstext">
+      <h4>Sign Up For newsletters</h4>
+      <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+    </div>
+
+    <div class="form">
+      <input type="text" placeholder="Your email address">
+      <button class="normal"> Sign Up</button>
+    </div>
+  </section>
+  <footer class="section-p1">
+    <div class="col">
+      <img class="logo" src="img/logo.png" alt="logo">
+      <h4>Contact</h4>
+      <p><strong>Adress:</strong> 562 Wellington Road, Street 32, San Franciscoc</p>
+      <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+      <p><strong>Houre:</strong> 10:00 - 18:00, Mon - Sat</p>
+
+      <div class="follow">
+        <h4>Follow us</h4>
+        <div class="icon">
+          <i class='bx bxl-facebook'></i>
+          <i class='bx bxl-twitter'></i>
+          <i class='bx bxl-instagram'></i>
+          <i class='bx bxl-youtube'></i>
+          <i class='bx bxl-pinterest-alt'></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="col">
+      <h4>About</h4>
+      <a href="#">About Us</a>
+      <a href="#"> Delivery Information</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms & Conditions</a>
+      <a href="#">Contact Us</a>
+    </div>
+
+    <div class="col">
+      <h4>My Account</h4>
+      <a href="#">Sign In</a>
+      <a href="#"> View Cart</a>
+      <a href="#">My Wishlist</a>
+      <a href="#">Track My Order</a>
+      <a href="#">Help</a>
+    </div>
+
+    <div class="col install">
+      <h4>install App</h4>
+      <p>From app store or Google play</p>
+      <div class="row">
+        <img src="img/pay/app.jpg" alt="app">
+        <img src="img/pay/play.jpg" alt="play">
+      </div>
+      <p>Secured payement Gateways</p>
+      <img src="img/pay/pay.png" alt="pay">
+    </div>
+
+  </footer>
+  <div class="copyright">
+    <p>2024, E.M.C Ecommerce</p>
+  </div>
+
+  
+
+  <script src="script.js"></script>
+</body>
 
 </html>
