--- a/sproduct.html
+++ b/sproduct.html
@@ -38,7 +38,7 @@
     </div>
   </header>
   <section id="prodetails" class="section-p1">
-    <div class="single-pro-image images">
+    <div class="single-pro-image">
       <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="">
 
       <div class="small-img-group">
