--- a/sproduct.html
+++ b/sproduct.html
@@ -219,6 +219,9 @@
       <p>Secured payement Gateways</p>
       <img src="img/pay/pay.png" alt="pay">
     </div>
+    <div class="copyright">
+      <p>2024, E.M.C Ecommerce</p>
+    </div>
 
   </footer>
   <div class="copyright">
