--- a/about.html
+++ b/about.html
@@ -1,19 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ecommerce</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tech2etc Ecommerce Tutorial</title>
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+  <body>
+    <header id="header">
+      <a href="#"><img src="img/logo.png" class="logo" alt="logo" /></a>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+      <div class="navbar">
+        <ul id="navlist">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="Shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li id="lg-bag">
+            <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+          </li>
+          <a href="#" id="close"><i class="bx bxs-chevrons-right"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <li>
+          <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+        </li>
+        <i id="bar" class="bx bx-menu"></i>
+      </div>
+    </header>
 
-    <body>
+    <section id="page-header" class="about-header">
+      <h2>#KnowUs</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur</p>
+    </section>
 
-        <script src="script.js"></script>
-    </body>
+    <section id="about-head" class="section-p1">
+      <img src="img/about/a6.jpg" alt="Le Magasin" />
+      <div>
+        <h2>Who We Are?</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta
+          reiciendis sed, mollitia accusamus repellat magnam? Exercitationem
+          commodi laborum quisquam facere, voluptas incidunt quos assumenda ad,
+          quo quis nostrum facilis ratione. Abréviation Emmet Lorem ipsum dolor
+          sit amet consectetur adipisicing elit. Excepturi facere cumque sed
+          voluptatibus consequatur tenetur culpa quos dicta rerum,
+          necessitatibus harum provident natus dolores ipsam reprehenderit
+          exercitationem officiis repudiandae hic!
+        </p>
 
+        <abbr title="">
+          Create stunning images with as much as or as little control as you
+          like thanks to a choice of Basic and Creative modes.
+        </abbr>
+
+        <br><br>
+
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" with="100%">Create stunning images with as much or as little control as you like tanhs to a choice of and  creative modes</marquee>
+      </div>
+    </section>
+
+    <section id="about-app" class="section-p1">
+        <h1>Download Our <a href="#">App</a></h1>
+        <div class="video">
+            <video autoplay muted loop src="img/about/1.mp4"></video>
+        </div>
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+          <img src="img/features/f1.png" alt="Free Shipping" />
+          <h6>Freen shipping</h6>
+        </div>
+        <div class="fe-box">
+          <img src="img/features/f2.png" alt="Free Shipping" />
+          <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+          <img src="img/features/f3.png" alt="Free Shipping" />
+          <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+          <img src="img/features/f4.png" alt="Free Shipping" />
+          <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+          <img src="img/features/f5.png" alt="Free Shipping" />
+          <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+          <img src="img/features/f6.png" alt="Free Shipping" />
+          <h6>F24/7 Support</h6>
+        </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+          <h4>Sign Up For newsletters</h4>
+          <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+  
+        <div class="form">
+          <input type="text" placeholder="Your email address">
+          <button class="normal"> Sign Up</button>
+        </div>
+    </section>
+
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="logo" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Adress:</strong> 562 Wellington Road, Street 32, San
+          Franciscoc
+        </p>
+        <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+        <p><strong>Houre:</strong> 10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="bx bxl-facebook"></i>
+            <i class="bx bxl-twitter"></i>
+            <i class="bx bxl-instagram"></i>
+            <i class="bx bxl-youtube"></i>
+            <i class="bx bxl-pinterest-alt"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#"> Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#"> View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>install App</h4>
+        <p>From app store or Google play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="app" />
+          <img src="img/pay/play.jpg" alt="play" />
+        </div>
+        <p>Secured payement Gateways</p>
+        <img src="img/pay/pay.png" alt="pay" />
+      </div>
+      <div class="copyright">
+        <p>2024, E.M.C Ecommerce</p>
+      </div>
+    </footer>
+    
+    <script src="script.js"></script>
+  </body>
 </html>
