--- a/cart.html
+++ b/cart.html
@@ -1,22 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
 
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+  <body>
+    <header id="header">
+      <a href="#"><img src="img/logo.png" class="logo" alt="logo" /></a>
 
-    <body>
+      <div class="navbar">
+        <ul id="navlist">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="Shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li id="lg-bag">
+            <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+          </li>
+          <a href="#" id="close"><i class="bx bxs-chevrons-right"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <li>
+          <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+        </li>
+        <i id="bar" class="bx bx-menu"></i>
+      </div>
+    </header>
 
+    <section id="page-header" class="about-header">
+      <h2>#let's_talk</h2>
+      <p>LEAVE A MESSAGE, Web love to hear from you!</p>
+    </section>
 
-        <script src="script.js"></script>
+    <section id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+            <tbody>
+                <td><a href="#"><i class='bx bx-time-five' ></i></a></td>
+                <td><img src="img/products/f1.jpg" alt=""></td>
+                <td>Cartoon Astronaut T-Shirts</td>
+                <td>2500fcfa</td>
+                <td><input type="number" value="1"></td>
+                <td>2500fcfa</td>
+            </tbody>
+            <tbody>
+                <td><a href="#"><i class='bx bx-time-five' ></i></a></td>
+                <td><img src="img/products/f1.jpg" alt=""></td>
+                <td>Cartoon Astronaut T-Shirts</td>
+                <td>2500fcfa</td>
+                <td><input type="number" value="1"></td>
+                <td>2500fcfa</td>
+            </tbody>
+            <tbody>
+                <td><a href="#"><i class='bx bx-time-five' ></i></a></td>
+                <td><img src="img/products/f1.jpg" alt=""></td>
+                <td>Cartoon Astronaut T-Shirts</td>
+                <td>2500fcfa</td>
+                <td><input type="number" value="1"></td>
+                <td>2500fcfa</td>
+            </tbody>
+        </table>
+    </section>
 
-    </body>
+    <section id="cart-add" class="section-p1">
+      <div id="coupon">
+        <h3>Apply Coupon</h3>
+        <div>
+          <input type="text" placeholder="Entre Your Coupon">
+          <button class="normal">Apply</button>
+        </div>
+      </div>
 
+      <div id="subtotal">
+        <h3>Cart Totals</h3>
+        <table>
+          <tr>
+            <td>Cart Subtotal</td>
+            <td>2500fcfa</td>
+          </tr>
+          <tr>
+            <td>Shipping</td>
+            <td>Free</td>
+          </tr>
+          <tr>
+            <td><strong>Total</strong></td>
+            <td><strong>2500fcfa</strong></td>
+          </tr>
+        </table>
+        <button>Proceed to checkout</button>
+      </div>
+    </section>
+
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="logo" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Adress:</strong> 562 Wellington Road, Street 32, San Francisco
+        </p>
+        <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+        <p><strong>Houre:</strong> 10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="bx bxl-facebook"></i>
+            <i class="bx bxl-twitter"></i>
+            <i class="bx bxl-instagram"></i>
+            <i class="bx bxl-youtube"></i>
+            <i class="bx bxl-pinterest-alt"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#"> Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#"> View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>install App</h4>
+        <p>From app store or Google play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="app" />
+          <img src="img/pay/play.jpg" alt="play" />
+        </div>
+        <p>Secured payement Gateways</p>
+        <img src="img/pay/pay.png" alt="pay" />
+      </div>
+      <div class="copyright">
+        <p>2024, E.M.C Ecommerce</p>
+      </div>
+    </footer>
+    <div class="copyright">
+      <p>2024, E.M.C Ecommerce</p>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
