--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+    />
 
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-        <link rel="stylesheet" href="style.css">
-    </head>
+  <body>
+    <header id="header">
+      <a href="#"><img src="img/logo.png" class="logo" alt="logo" /></a>
 
-    <body>
+      <div class="navbar">
+        <ul id="navlist">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="Shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li id="lg-bag">
+            <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+          </li>
+          <a href="#" id="close"><i class="bx bxs-chevrons-right"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <li>
+          <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
+        </li>
+        <i id="bar" class="bx bx-menu"></i>
+      </div>
+    </header>
+
+    <section id="page-header" class="about-header">
+      <h2>#let's_talk</h2>
+      <p>LEAVE A MESSAGE, Web love to hear from you!</p>
+    </section>
+
+    <section id="contact-details" class="section-p1">
+      <div class="details">
+        <span>GET IN TOUCH</span>
+        <h2>Visit one of our agency location or contact us today</h2>
+        <h3>Head office</h3>
+        <div>
+          <li>
+            <i class="bx bx-map-alt"></i>
+            <p>562 Wellington Road, Street 32, San Francisco</p>
+          </li>
+          <li>
+            <i class="bx bx-envelope"></i>
+            <p>contact@example.com</p>
+          </li>
+          <li>
+            <i class="bx bxs-phone"></i>
+            <p>+01 2222 365 /(+91) 01 2345 6789</p>
+          </li>
+          <li>
+            <i class="bx bx-time-five"></i>
+            <p>Monday to Saturday: 9.00am to 16.pm</p>
+          </li>
+        </div>
+      </div>
+
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155104.47062848578!2d-122.48175521104356!3d37.76415188824259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808d10b86437%3A0xcf0541d7a109ef4!2sFairmont%20San%20Francisco!5e1!3m2!1sfr!2sfr!4v1727215234189!5m2!1sfr!2sfr"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+
+    <section id="form-details" class="section-p1">
+      <form action="">
+        <span>LEAVE A MESSAGE</span>
+        <h2>We love to hear from you</h2>
+        <input type="text" placeholder="Your name">
+        <input type="text" placeholder="E-mail">
+        <input type="text" placeholder="Subject">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <button class="normal">Submit</button>
+      </form>
+
+      <div class="people">
+        <div>
+          <img src="img/people/1.png" alt="people">
+          <p><span>John Doe</span>Senior Marketing Mangar <br> phone: + 000 123 000 77 88 <br>Email: contact@example.com</p>
+        </div>
+        <div>
+          <img src="img/people/2.png" alt="people">
+          <p><span>William Smith</span>Senior Marketing Mangar <br> Phone: + 000 123 000 77 88 <br>Email: contact@example.com</p>
+        </div>
+        <div>
+          <img src="img/people/3.png" alt="people">
+          <p><span>Ema Stone</span>Senior Marketing Mangar <br> Phone: + 000 123 000 77 88 <br>Email: contact@example.com</p>
+        </div>
+      </div>
+    </section>
 
 
-        <script src="script.js"></script>
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newstext">
+        <h4>Sign Up For newsletters</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>special offers.</span>
+        </p>
+      </div>
 
-    </body>
+      <div class="form">
+        <input type="text" placeholder="Your email address" />
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
 
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="logo" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Adress:</strong> 562 Wellington Road, Street 32, San Francisco
+        </p>
+        <p><strong>Phone:</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+        <p><strong>Houre:</strong> 10:00 - 18:00, Mon - Sat</p>
+
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icon">
+            <i class="bx bxl-facebook"></i>
+            <i class="bx bxl-twitter"></i>
+            <i class="bx bxl-instagram"></i>
+            <i class="bx bxl-youtube"></i>
+            <i class="bx bxl-pinterest-alt"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#"> Delivery Information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Conditions</a>
+        <a href="#">Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#"> View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>install App</h4>
+        <p>From app store or Google play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="app" />
+          <img src="img/pay/play.jpg" alt="play" />
+        </div>
+        <p>Secured payement Gateways</p>
+        <img src="img/pay/pay.png" alt="pay" />
+      </div>
+      <div class="copyright">
+        <p>2024, E.M.C Ecommerce</p>
+      </div>
+    </footer>
+    
+    <script src="script.js"></script>
+  </body>
 </html>
